# toobdoonlood

./: .gitignore  Cargo.toml  Dockerfile  Rocket.toml  docker-compose.yml
dev_templates/: index.html.tera
src/: download.rs  index.rs  main.rs
static/: main.css  main.js
