[package]
name = "toobdoonlood"
version = "0.1.0"
authors = ["barigorokarl <github@der-schreiber.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.6"
tera = "1.6.1"
serde = { version = "1.0.118", features = ["derive"] }
url = "2.2.0"
sled = "0.34.6"
bincode = "1.3.1"
anyhow = "1.0.37"
serde_json = "1.0.61"
regex = "1.4.3"
itertools = "0.10.0"
uuid = { version="0.8.2", features = ["v4"] }
time = "0.1.44"

[dependencies.rocket_contrib]
version = "0.4.6"
default-features = false
features = ["templates", "tera_templates", "serve"]